--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="cor_do_texto">Cor do texto</string>
     <string name="meme_gerado">Meme gerado</string>
     <string name="mudar_cor">Nova cor</string>
+    <string name="mudar_tamanho_fonte">Novo Tamanho Fonte</string>
 </resources>
